# vmware-nsx

./: .gitignore  .gitreview  .pylintrc  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.md  README.rst  TESTING.rst  lower-constraints.txt  openstack-common.conf  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
api-ref/: rest.md
devstack/: README.rst  localrc_nsx_p  localrc_nsx_v3  override-defaults  plugin.sh  settings
devstack/lib/: nsx_common  nsx_v3_p_common  vmware_dvs  vmware_nsx  vmware_nsx_p  vmware_nsx_tvd  vmware_nsx_v  vmware_nsx_v3
devstack/nsx_p/: devstackgaterc
devstack/nsx_v/: devstackgaterc  tvd_devstackgaterc
devstack/nsx_v3/: controller_local.conf.sample  devstackgaterc  kvm_compute_local.conf.sample
devstack/tools/: nsxp_cleanup.py  nsxt_cleanup.py  nsxv3_cleanup.py  nsxv_cleanup.py  nsxv_edge_resources.py  nsxv_fw_autodraft_setting.py
doc/: requirements.txt
doc/source/: admin_util.rst  conf.py  devstack.rst  housekeeper.rst  index.rst  installation.rst  usage.rst
etc/: README.txt  nsx.ini  policy.json
etc/oslo-config-generator/: nsx.ini
etc/oslo-policy-generator/: policy.conf
etc/policy/: network-gateways.json
etc/policy.d/: dynamic-routing.json  flow-classifier.json  routers.json  security-groups.json
releasenotes/notes/: bind-floating-ips-per-az-142f0de7ebfae1c8.yaml  block-all-no-security-groups-47af550349dbc85a.yaml  dns-search-domain-configuration-a134af0ef028282c.yaml  dvs_dns_integration-831224f15acbc728.yaml  ens_support-49dbc626ba1b16be.yaml  fwaas_v2-9445ea0aaea91c60.yaml  nsx-dns-integration-extension-8260456051d61743.yaml  nsx-extension-drivers-b1aedabe5296d4d0.yaml  nsxv-availability-zones-85db159a647762b3.yaml  nsxv-bgp-support-44f857d382943e08.yaml  nsxv-edge-random-placement-9534371967edec8f.yaml  nsxv-exclusive-dhcp-7e5cde1cd88f8c5b.yaml  nsxv-fwaas-driver-4c457dee3fc3bae2.yaml  nsxv-fwaas-v2-driver-0b78d5e2c4034b21.yaml  nsxv-ipam-support-6eb1ac4e0e025ddd.yaml  nsxv-lbaas-l7-704f748300d1a399.yaml  nsxv-policy-3f552191f94873cd.yaml  nsxv-router-flavors-8e4cea7f6e12d44d.yaml  nsxv-service-insertion-32ab34a0e0f6ab4f.yaml  nsxv-subnets-dhcp-mtu-c7028748b516422e.yaml  nsxv-vlan-selection-ec73aac44b3648a1.yaml  nsxv3-add-trunk-driver-925ad1205972cbdf.yaml  nsxv3-availability-zones-8decf892df62.yaml  nsxv3-default-tier0-router-2983c6de10dd465a.yaml  nsxv3-dhcp-relay-32cf1ae281e1.yaml  nsxv3-init-from-tags-bcd4f3245a78e9a6.yaml  nsxv3-ipam-support-137174152c65459d.yaml  nsxv3-lbaasv2-driver-57f37d6614eb1510.yaml  nsxv3-lbaasv2-error-no-member-635ffc6308289aca.yaml  nsxv3-multi-managers-b645c4202a8476e9.yaml  nsxv3-native-dhcp-config-2b6bdd372a2d643f.yaml  nsxv3-native-dhcp-metadata-27af1de98302162f.yaml  nsxv3-switching-profiles-250aa43f5070dc37.yaml  nsxv3-taas-driver-1a316cf3915fcb3d.yaml  nsxv3-trnasparent-vlan-fe06e1d3aa2fbcd9.yaml  nsxv3-update-provider-types-aa1c20e988878ffe.yaml  nsxv3-vlan-selection-30c3d1dc1abe41d1.yaml  nsxv3-vpnaas-0b02762ff4b83904.yaml  octavia-support-2fa83d464dbc4e52.yaml  provider-security-group-2cfc1231dcaf21ac.yaml  (+4 more)
releasenotes/source/: conf.py  index.rst  ocata.rst  queens.rst
rhosp13/: instructions.rst
tempest/nsxv3_tests/: devstackgaterc  test_extra_dhcp_options.txt  test_network.txt  test_network_negative.txt  test_port.txt
tools/: check_bash.sh  check_i18n.py  coding-checks.sh  i18n_cfg.py  install_venv.py  misc-sanity-checks.sh  tox_install.sh  tox_install_project.sh  with_venv.sh
tools/python-nsxadmin/: README.rst  setup.py
tools/python_nsxadmin/: requirements.txt  setup.cfg
tools/python_nsxadmin/admin/: shell.py
tools/python_nsxadmin/admin/plugins/common/: constants.py  formatters.py
tools/python_nsxadmin/admin/plugins/nsxv/resources/: backup_edges.py  dhcp_binding.py  edges.py  spoofguard_policy.py
tools/python_nsxadmin/admin/plugins/nsxv3/resources/: securitygroups.py
vmware-nsx/locale/: vmware-nsx.pot
vmware_nsx/: __init__.py  _i18n.py  check_nsx_config.py  dhcpmeta_modes.py  nsx_cluster.py  opts.py  plugin.py  version.py
vmware_nsx/api_client/: __init__.py  base.py  client.py  eventlet_client.py  eventlet_request.py  exception.py  request.py  version.py
vmware_nsx/api_replay/: cli.py  client.py  utils.py
vmware_nsx/common/: availability_zones.py  config.py  driver_api.py  exceptions.py  l3_rpc_agent_api.py  locking.py  managers.py  nsx_constants.py  nsx_utils.py  nsxv_constants.py  securitygroups.py  sync.py  utils.py
vmware_nsx/db/: db.py  distributedrouter.py  extended_security_group.py  extended_security_group_rule.py  lsn_db.py  maclearning.py  networkgw_db.py  nsx_models.py  nsx_portbindings_db.py  nsxrouter.py  nsxv_db.py  nsxv_models.py  qos_db.py  routertype.py  vcns_models.py  vnic_index_db.py
vmware_nsx/dhcp_meta/: combined.py  constants.py  lsnmanager.py  migration.py  modes.py  nsx.py  rpc.py
vmware_nsx/dvs/: dvs.py  dvs_utils.py
vmware_nsx/etc/: nsx.ini
vmware_nsx/extension_drivers/: dns_integration.py
vmware_nsx/extensions/: advancedserviceproviders.py  api_replay.py  dhcp_mtu.py  dns_search_domain.py  edge_service_gateway_bgp_peer.py  housekeeper.py  lsn.py  maclearning.py  networkgw.py  nsxpolicy.py  nvp_qos.py  projectpluginmap.py  providersecuritygroup.py  qos.py  qos_queue.py  routersize.py  routertype.py  secgroup_rule_local_ip_prefix.py  securitygrouplogging.py  securitygrouppolicy.py  vnicindex.py
vmware_nsx/locale/: vmware_nsx.pot
vmware_nsx/nsxlib/: l2gateway.py  lsn.py  queue.py  router.py  secgroup.py  switch.py  versioning.py
vmware_nsx/osc/: plugin.py
vmware_nsx/plugins/: dvs.py  managers.py  nsx_v.py  nsx_v3_plugin.py  nsx_v_md_proxy.py
vmware_nsx/policies/: __init__.py  base.py  housekeeper.py  lsn.py  maclearning.py  network_gateway.py  nsxpolicy.py  providersecuritygroup.py  qos_queue.py  security_group.py
vmware_nsx/shell/: __init__.py  commands.py  hk_trigger.sh  nsx_instance_if_migrate.py  nsxadmin.py  resources.py
vmware_nsx/vshield/: edge_utils.py  (+9 more)
vmware_nsx_tempest/: README.rst  __init__.py  _i18n.py  config.py  plugin.py
(+745 files in other folders)
