[metadata]
name = vmware-nsx
summary = VMware NSX library for OpenStack projects
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://launchpad.net/vmware-nsx
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    vmware_nsx

[entry_points]
console_scripts =
    neutron-check-nsx-config = vmware_nsx.check_nsx_config:main
    nsxadmin = vmware_nsx.shell.nsxadmin:main
neutron.db.alembic_migrations =
    vmware-nsx = vmware_nsx.db.migration:alembic_migrations
neutron.core_plugins =
    vmware = vmware_nsx.plugin:NsxMhPlugin
neutron.service_plugins =
    vmware_nsx_l2gw = vmware_nsx.services.l2gateway.common.plugin:NsxL2GatewayPlugin
    vmware_nsxv_qos = vmware_nsx.services.qos.nsx_v.plugin:NsxVQosPlugin
neutron.qos.notification_drivers =
    vmware_nsxv3_message_queue = vmware_nsx.services.qos.nsx_v3.message_queue:NsxV3QosNotificationDriver
vmware_nsx.neutron.nsxv.router_type_drivers =
    shared = vmware_nsx.plugins.nsx_v.drivers.shared_router_driver:RouterSharedDriver
    distributed = vmware_nsx.plugins.nsx_v.drivers.distributed_router_driver:RouterDistributedDriver
    exclusive = vmware_nsx.plugins.nsx_v.drivers.exclusive_router_driver:RouterExclusiveDriver
tempest.test_plugins =
    vmware-nsx-tempest-plugin = vmware_nsx_tempest.plugin:VMwareNsxTempestPlugin
oslo.config.opts =
    nsx = vmware_nsx.opts:list_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = vmware_nsx/locale
domain = vmware_nsx

[update_catalog]
domain = vmware_nsx
output_dir = vmware_nsx/locale
input_file = vmware_nsx/locale/vmware_nsx.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = vmware_nsx/locale/vmware_nsx.pot

[pbr]
autodoc_index_modules = 1

[wheel]
universal = 1
