[metadata]
name = vmware-nsx
summary = VMware NSX library for OpenStack projects
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://launchpad.net/vmware-nsx
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    vmware_nsx
[entry_points]
console_scripts =
    neutron-check-nsx-config = vmware_nsx.check_nsx_config:main
    nsxadmin = vmware_nsx.shell.nsxadmin:main
    nsx-migration = vmware_nsx.api_replay.cli:main
neutron.db.alembic_migrations =
    vmware-nsx = vmware_nsx.db.migration:alembic_migrations
neutron.core_plugins =
    vmware_nsx = vmware_nsx.plugin:NsxPlugin
    vmware_nsxv = vmware_nsx.plugin:NsxVPlugin
    vmware_nsxv3 = vmware_nsx.plugin:NsxV3Plugin
    vmware_dvs = vmware_nsx.plugin:NsxDvsPlugin
    vmware_nsxtvd = vmware_nsx.plugin:NsxTVDPlugin
firewall_drivers =
    vmware_nsxv_edge = vmware_nsx.services.fwaas.nsx_v.edge_fwaas_driver:EdgeFwaasDriver
    vmware_nsxv3_edge = vmware_nsx.services.fwaas.nsx_v3.edge_fwaas_driver_v1:EdgeFwaasV3DriverV1
    vmware_nsxv3_edge_v1 = vmware_nsx.services.fwaas.nsx_v3.edge_fwaas_driver_v1:EdgeFwaasV3DriverV1
    vmware_nsxv3_edge_v2 = vmware_nsx.services.fwaas.nsx_v3.edge_fwaas_driver_v2:EdgeFwaasV3DriverV2
    vmware_nsxtvd_edge_v1 = vmware_nsx.services.fwaas.nsx_tv.edge_fwaas_driver_v1:EdgeFwaasTVDriverV1
    vmware_nsxtvd_edge_v2 = vmware_nsx.services.fwaas.nsx_tv.edge_fwaas_driver_v2:EdgeFwaasTVDriverV2
neutron.service_plugins =
    vmware_nsxv_qos = vmware_nsx.services.qos.nsx_v.plugin:NsxVQosPlugin
    vmware_nsxtvd_lbaasv2 = vmware_nsx.services.lbaas.nsx.plugin:LoadBalancerTVPluginV2
    vmware_nsxtvd_fwaasv1 = vmware_nsx.services.fwaas.nsx_tv.plugin_v1:FwaasTVPluginV1
    vmware_nsxtvd_fwaasv2 = vmware_nsx.services.fwaas.nsx_tv.plugin_v2:FwaasTVPluginV2
    vmware_nsxtvd_l2gw = vmware_nsx.services.l2gateway.nsx_tvd.plugin:L2GatewayPlugin
    vmware_nsxtvd_qos = vmware_nsx.services.qos.nsx_tvd.plugin:QoSPlugin
    vmware_nsxtvd_vpnaas = vmware_nsx.services.vpnaas.nsx_tvd.plugin:VPNPlugin
neutron.qos.notification_drivers =
    vmware_nsxv3_message_queue = vmware_nsx.services.qos.nsx_v3.message_queue:NsxV3QosNotificationDriver
neutron.ipam_drivers =
    vmware_nsxv_ipam = vmware_nsx.services.ipam.nsx_v.driver:NsxvIpamDriver
    vmware_nsxv3_ipam = vmware_nsx.services.ipam.nsx_v3.driver:Nsxv3IpamDriver
vmware_nsx.extension_drivers =
    vmware_nsxv_dns = vmware_nsx.extension_drivers.dns_integration:DNSExtensionDriverNSXv
    vmware_nsxv3_dns = vmware_nsx.extension_drivers.dns_integration:DNSExtensionDriverNSXv3
    vmware_dvs_dns = vmware_nsx.extension_drivers.dns_integration:DNSExtensionDriverDVS
vmware_nsx.neutron.nsxv.router_type_drivers =
    shared = vmware_nsx.plugins.nsx_v.drivers.shared_router_driver:RouterSharedDriver
    distributed = vmware_nsx.plugins.nsx_v.drivers.distributed_router_driver:RouterDistributedDriver
    exclusive = vmware_nsx.plugins.nsx_v.drivers.exclusive_router_driver:RouterExclusiveDriver
oslo.config.opts =
    nsx = vmware_nsx.opts:list_opts
networking_sfc.flowclassifier.drivers =
    vmware-nsxv-sfc = vmware_nsx.services.flowclassifier.nsx_v.driver:NsxvFlowClassifierDriver
openstack.cli.extension =
    nsxclient = vmware_nsx.osc.plugin
openstack.nsxclient.v2 =
    port_create = vmware_nsx.osc.v2.port:NsxCreatePort
    port_set = vmware_nsx.osc.v2.port:NsxSetPort
    router_create = vmware_nsx.osc.v2.router:NsxCreateRouter
    router_set = vmware_nsx.osc.v2.router:NsxSetRouter
    security_group_create = vmware_nsx.osc.v2.security_group:NsxCreateSecurityGroup
    security_group_set = vmware_nsx.osc.v2.security_group:NsxSetSecurityGroup
    subnet_create = vmware_nsx.osc.v2.subnet:NsxCreateSubnet
    subnet_set = vmware_nsx.osc.v2.subnet:NsxSetSubnet
    project_plugin_create = vmware_nsx.osc.v2.project_plugin_map:CreateProjectPluginMap
    project_plugin_show = vmware_nsx.osc.v2.project_plugin_map:ShowProjectPluginMap
    project_plugin_list = vmware_nsx.osc.v2.project_plugin_map:ListProjectPluginMap
vmware_nsx.neutron.nsxv.housekeeper.jobs =
    error_dhcp_edge = vmware_nsx.plugins.nsx_v.housekeeper.error_dhcp_edge:ErrorDhcpEdgeJob
    error_backup_edge = vmware_nsx.plugins.nsx_v.housekeeper.error_backup_edge:ErrorBackupEdgeJob

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
# warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = vmware_nsx/locale
domain = vmware_nsx

[update_catalog]
domain = vmware_nsx
output_dir = vmware_nsx/locale
input_file = vmware_nsx/locale/vmware_nsx.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = vmware_nsx/locale/vmware_nsx.pot

[pbr]
autodoc_index_modules = 1
# NOTE(boden): enable and validate once a new version of pbr is released.
# More info can be found on the ML:
# http://lists.openstack.org/pipermail/openstack-dev/2016-June/097849.html

[wheel]
universal = 1
