[metadata]
name = python-nsxadmin
summary = CLI and Client Library for VMware-NSX
description-file =
    README.rst
author = VMware-NSX Project
author-email = neutron-team@vmware.com
home-page = https://launchpad.net/vmware-nsx
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    nsxadmin

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    nsxadmin = admin.shell:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
